# domain-transaction-producer

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md
bindings/src/: fund.rs  lib.rs  load.rs  multicall_3.rs
dtp/: .env.example  .gitignore  Cargo.toml  README.md
dtp/logs/: failure_1100_accounts.txt  failure_1300_accounts.txt  failure_1400_accounts_1.txt  failure_1400_accounts_2.txt  failure_1500_accounts.txt  failure_1800_accounts.txt  failure_2000_accounts.txt  success_1000_accounts_1.txt  success_1000_accounts_2.txt  success_1300_accounts.txt
dtp/logs/heavy/: acs_1_count_2200_after_sc_deploy.txt  acs_1_count_2200_after_sc_storage_init.txt  acs_1_count_2651.txt  acs_1_count_2652.txt  failure_500_accounts.txt  failure_50_accounts.txt  log.md  success_1_accounts.txt  success_300_accounts.txt
dtp/src/: contracts.rs  main.rs  utils.rs
src/: main.rs  utils.rs
