[package]
name = "domain-transaction-producer"
description = "A tool to produce transactions for the domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.7"
structopt = "0.3.26"
dotenv = "0.15.0"
env_logger = "0.10.0"
ethers = { version = "2.0.9", default-features = false, features = ["rustls"] }
eyre = "0.6"
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }
