[package]
name = "dtp"
description = "A tool to produce transactions for the domain"
version = "0.1.0"
edition = "2021"
authors = ["Abhijit Roy <dalvath3700@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI
clap = "4.4.7"
structopt = "0.3.26"

# Ethers
ethers = { version = "2.0.9", default-features = false, features = ["rustls"]}

# Error handling
eyre = "0.6"

# Async
tokio = { version = "1.19", features = ["macros", "rt-multi-thread"] }

# Serialization/Deserialization
serde_json = "1.0.107"

# Flashbots
# ethers-flashbots = { git = "https://github.com/onbjerg/ethers-flashbots" }

# Rust bindings for Subspace EVM Contracts
bindings ={ path = "../bindings"}

# env
dotenv = "0.15.0"
